basic structure for spotify

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -18,3 +18,16 @@ tuna.gui.tab.spotify.refreshtoken="Refresh token"
 tuna.gui.tab.spotify.requesttoken="Request token"
 tuna.gui.tab.spotify.performrefresh="Perform refresh"
 tuna.gui.tab.spotify.linkmessage="This will open a browser window with the official Spotify webpage for you to login and grant access. Make sure to check that the URL is correct before logging in!"
+tuna.gui.tab.spotify.label.log="Response log"
+
+# Basic tab
+tuna.gui.basics.song.info="Song info path"
+tuna.gui.basics.song.cover="Song cover path"
+tuna.gui.basics.song.lyrics="Song lyrics path"
+tuna.gui.basics.song.format="Song format"
+tuna.gui.basics.song.placeholder="Song placeholder"
+tuna.gui.basics.format.info="Format info:\n %t => Song title\n %m => Song artist\n %a => Album title\n %r => Full release date\n %y => Release year"
+tuna.gui.basics.source="Song source"
+tuna.gui.basics.status.stopped="Tuna is not running"
+tuna.gui.basics.status.started="Tuna is running"
+tuna.gui.basics.refreshrate="Refresh rate"
