fixed refresh token not being saved fixed login state being reset after successful login fixed thread not starting

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -19,6 +19,7 @@ tuna.gui.tab.spotify.requesttoken="Request token"
 tuna.gui.tab.spotify.performrefresh="Perform refresh"
 tuna.gui.tab.spotify.linkmessage="This will open a browser window with the official Spotify webpage for you to login and grant access. Make sure to check that the URL is correct before logging in!"
 tuna.gui.tab.spotify.label.log="Response log"
+tuna.gui.tab.spotify.showlog="Show log"
 
 # Basic tab
 tuna.gui.basics.song.info="Song info path"
@@ -33,4 +34,4 @@ tuna.gui.basics.status.started="Tuna is running"
 tuna.gui.basics.refreshrate="Refresh rate"
 tuna.gui.basics.start="Start Tuna"
 tuna.gui.basics.stop="Stop Tuna"
-tuna.gui.basics.notrunning="Plugin is not running"
+tuna.gui.basics.notrunning="Previe: Plugin is not running"
