--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -32,6 +32,6 @@ tuna.gui.basics.source="Song source"
 tuna.gui.basics.status.stopped="Tuna is not running"
 tuna.gui.basics.status.started="Tuna is running"
 tuna.gui.basics.refreshrate="Refresh rate"
-tuna.gui.basics.start="Start Tuna"
-tuna.gui.basics.stop="Stop Tuna"
+tuna.gui.basics.start="Start"
+tuna.gui.basics.stop="Stop"
 tuna.gui.basics.notrunning="Previe: Plugin is not running"
