song output works fixed formatting issues

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -8,7 +8,7 @@ tuna.gui.tab.window_title="Window Title"
 tuna.gui.tab.about="About"
 
 # Spotify tab
-tuna.gui.tab.spotify.info="Grabs the currently playing song directly through the Spotify API. To enable this you have to log into Spotify over the link below. After you grant access, you'll get a login code, which you have to paste into the textbox blow."
+tuna.gui.tab.spotify.info="Grabs the currently playing song directly through the Spotify API. To enable this you have to log into Spotify over the link below. After you grant access, you'll get a login code, which you have to paste into the textbox blow.\n Keep in mind that some API interactions, like pausing can only be used by premium users"
 tuna.gui.tab.spotify.login="Open login page"
 tuna.gui.tab.spotify.authcode="Authentication code"
 tuna.gui.tab.spotify.loggedin="Logged in"
@@ -19,19 +19,24 @@ tuna.gui.tab.spotify.requesttoken="Request token"
 tuna.gui.tab.spotify.performrefresh="Perform refresh"
 tuna.gui.tab.spotify.linkmessage="This will open a browser window with the official Spotify webpage for you to login and grant access. Make sure to check that the URL is correct before logging in!"
 tuna.gui.tab.spotify.label.log="Response log"
-tuna.gui.tab.spotify.showlog="Show log"
+tuna.gui.tab.spotify.enablelog="Enable log"
+
+# Config defeaults
+tuna.config.song.placeholder="No song playing"
+tuna.config.song.format="%a - %t"
 
 # Basic tab
-tuna.gui.basics.song.info="Song info path"
-tuna.gui.basics.song.cover="Song cover path"
-tuna.gui.basics.song.lyrics="Song lyrics path"
-tuna.gui.basics.song.format="Song format"
-tuna.gui.basics.song.placeholder="Song placeholder"
-tuna.gui.basics.format.info="Format info:\n %t => Song title\n %m => Song artist\n %a => Album title\n %r => Full release date\n %y => Release year"
-tuna.gui.basics.source="Song source"
-tuna.gui.basics.status.stopped="Tuna is not running"
-tuna.gui.basics.status.started="Tuna is running"
-tuna.gui.basics.refreshrate="Refresh rate"
-tuna.gui.basics.start="Start"
-tuna.gui.basics.stop="Stop"
-tuna.gui.basics.notrunning="Previe: Plugin is not running"
+tuna.gui.tab.basics.song.info="Song info path"
+tuna.gui.tab.basics.song.cover="Song cover path"
+tuna.gui.tab.basics.song.lyrics="Song lyrics path"
+tuna.gui.tab.basics.song.format="Song format"
+tuna.gui.tab.basics.song.placeholder="Song placeholder"
+tuna.gui.tab.basics.format.info="Format info:\n %t => Song title\n %m => Song artist\n %a => Album title\n %r => Full release date\n %y => Release year\nKeep in mind that some sources do not support all format options"
+tuna.gui.tab.basics.source="Song source"
+tuna.gui.tab.basics.status.stopped="Tuna is not running"
+tuna.gui.tab.basics.status.started="Tuna is running"
+tuna.gui.tab.basics.refreshrate="Refresh rate"
+tuna.gui.tab.basics.start="Start"
+tuna.gui.tab.basics.stop="Stop"
+tuna.gui.tab.basics.notrunning="Preview: Plugin is not running"
+tuna.gui.tab.basics.preview="Preview: "
