--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -25,9 +25,13 @@ tuna.gui.tab.spotify.enablelog="Enable log"
 tuna.config.song.placeholder="No song playing"
 tuna.config.song.format="%a - %t"
 
+# MPD tab
+tuna.gui.tab.mpd.server="MPD server address"
+
 # Basic tab
 tuna.gui.tab.basics.song.info="Song info path"
 tuna.gui.tab.basics.song.cover="Song cover path"
+tuna.gui.tab.basics.song.cover.enable="Try downloading cover"
 tuna.gui.tab.basics.song.lyrics="Song lyrics path"
 tuna.gui.tab.basics.song.format="Song format"
 tuna.gui.tab.basics.song.placeholder="Song placeholder"
