Added apply button to dialog

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -28,6 +28,8 @@ tuna.config.song.format="%a - %t"
 # MPD tab
 tuna.gui.tab.mpd.server="MPD server address"
 
+# Window title tab
+tuna.gui.tab.windowtitle.title="Search term in title"
 # Basic tab
 tuna.gui.tab.basics.song.info="Song info path"
 tuna.gui.tab.basics.song.cover="Song cover path"
