added timestamp, disc and track number format

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -30,6 +30,7 @@ tuna.gui.tab.mpd.server="MPD server address"
 
 # Window title tab
 tuna.gui.tab.windowtitle.title="Search term in title"
+
 # Basic tab
 tuna.gui.tab.basics.song.info="Song info path"
 tuna.gui.tab.basics.song.cover="Song cover path"
@@ -37,7 +38,7 @@ tuna.gui.tab.basics.song.cover.enable="Try downloading cover"
 tuna.gui.tab.basics.song.lyrics="Song lyrics path"
 tuna.gui.tab.basics.song.format="Song format"
 tuna.gui.tab.basics.song.placeholder="Song placeholder"
-tuna.gui.tab.basics.format.info="Format info:\n %t => Song title\n %m => Song artist\n %a => Album title\n %r => Full release date\n %y => Release year\nKeep in mind that some sources do not support all format options"
+tuna.gui.tab.basics.format.info="Format info:\n %t => Song title\n %m => Song artistff\t\t %d => Disc number\n %a => Album title\t\t %n => Track number\n %r => Full release date\t\t %p => Song progress\n %y => Release year\t\t %l => Song length\nKeep in mind that some sources do not support all format options"
 tuna.gui.tab.basics.source="Song source"
 tuna.gui.tab.basics.status.stopped="Tuna is not running"
 tuna.gui.tab.basics.status.started="Tuna is running"
