prevent mpd connection from timing out added files and gui for window title source

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -30,6 +30,7 @@ tuna.gui.tab.mpd.server="MPD server address"
 
 # Window title tab
 tuna.gui.tab.windowtitle.title="Search term in title"
+tuna.gui.tab.windowtitle.regex="Use regex for search"
 
 # Basic tab
 tuna.gui.tab.basics.song.info="Song info path"
