finished window source switched config stuff to macros

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -31,6 +31,11 @@ tuna.gui.tab.mpd.server="MPD server address"
 # Window title tab
 tuna.gui.tab.windowtitle.title="Search term in title"
 tuna.gui.tab.windowtitle.regex="Use regex for search"
+tuna.gui.tab.windowtitle.modifiers="Text modifications"
+tuna.gui.tab.windowtitle.replace="Replace"
+tuna.gui.tab.windowtitle.with="with"
+tuna.gui.tab.windowtitle.cut.begin="Cut first n characters"
+tuna.gui.tab.windowtitle.cut.end="Cut last n characters"
 
 # Basic tab
 tuna.gui.tab.basics.song.info="Song info path"
