finished window title source fixed utf8 characters in window title fixed memory leak when reloading config

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -21,11 +21,12 @@ tuna.gui.tab.spotify.linkmessage="This will open a browser window with the offic
 tuna.gui.tab.spotify.label.log="Response log"
 tuna.gui.tab.spotify.enablelog="Enable log"
 
-# Config defeaults
+# Config defaults
 tuna.config.song.placeholder="No song playing"
 tuna.config.song.format="%a - %t"
 
 # MPD tab
+tuna.gui.tab.mpd.local="Local connection"
 tuna.gui.tab.mpd.server="MPD server address"
 
 # Window title tab
