--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -8,7 +8,7 @@ tuna.gui.tab.window_title="Window Title"
 tuna.gui.tab.about="About"
 
 # Spotify tab
-tuna.gui.tab.spotify.info="Grabs the currently playing song directly through the Spotify API. To enable this you have to log into Spotify over the link below. After you grant access, you'll get a login code, which you have to paste into the textbox blow.\nKeep in mind that some API interactions, like pausing can only be used by premium users"
+tuna.gui.tab.spotify.info="Grabs the currently playing song directly through the Spotify API. To enable this you have to log into Spotify over the link below. After you grant access, you'll get a login code, which you have to paste into the textbox below.\nKeep in mind that some API interactions, like pausing can only be used by premium users"
 tuna.gui.tab.spotify.login="Open login page"
 tuna.gui.tab.spotify.authcode="Authentication code"
 tuna.gui.tab.spotify.loggedin="Logged in"
@@ -45,7 +45,7 @@ tuna.gui.tab.basics.song.cover.enable="Try downloading cover"
 tuna.gui.tab.basics.song.lyrics="Song lyrics path"
 tuna.gui.tab.basics.song.format="Song format"
 tuna.gui.tab.basics.song.placeholder="Song placeholder"
-tuna.gui.tab.basics.format.info="Format info:\n %t => Song title\n %m => Song artistff\t\t %d => Disc number\n %a => Album title\t\t %n => Track number\n %r => Full release date\t\t %p => Song progress\n %y => Release year\t\t %l => Song length\nKeep in mind that some sources do not support all format options"
+tuna.gui.tab.basics.format.info="Format info:\n %t => Song title\n %m => Song artist\t\t %d => Disc number\n %a => Album title\t\t %n => Track number\n %r => Full release date\t\t %p => Song progress\n %y => Release year\t\t %l => Song length\nKeep in mind that some sources do not support all format options"
 tuna.gui.tab.basics.source="Song source"
 tuna.gui.tab.basics.status.stopped="Tuna is not running"
 tuna.gui.tab.basics.status.started="Tuna is running"
