fixed ascii and utf8 issues in paths and song format

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -50,7 +50,7 @@ tuna.gui.tab.basics.song.cover.enable="Try downloading cover"
 tuna.gui.tab.basics.song.lyrics="Song lyrics path"
 tuna.gui.tab.basics.song.format="Song format"
 tuna.gui.tab.basics.song.placeholder="Song placeholder"
-tuna.gui.tab.basics.format.info="Format info:\n %t => Song title\n %m => Song artist\t\t %d => Disc number\n %a => Album title\t\t %n => Track number\n %r => Full release date\t\t %p => Song progress\n %y => Release year\t\t %l => Song length\nKeep in mind that some sources do not support all format options"
+tuna.gui.tab.basics.format.info="Format info:\n %t => Song title\n %m => Song artist\t\t%d => Disc number\n %a => Album title\t\t\t%n => Track number\n %r => Full release date\t\t%p => Song progress\n %y => Release year\t\t%l => Song length\nKeep in mind that some sources do not support all format options"
 tuna.gui.tab.basics.source="Song source"
 tuna.gui.tab.basics.status.stopped="Tuna is not running"
 tuna.gui.tab.basics.status.started="Tuna is running"
