Added option to assume playback is paused, to prevent tuna from displaying Window titles that aren't supposed to be shown Added linebreak format option Added multiple output file option Fixed memory leak when reloading config

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -36,6 +36,7 @@ tuna.gui.tab.mpd.server="MPD server address"
 
 # Window title tab
 tuna.gui.tab.windowtitle.title="Search term in title"
+tuna.gui.tab.windowtitle.pause="Assume paused when this string can't be found"
 tuna.gui.tab.windowtitle.regex="Use regex for search"
 tuna.gui.tab.windowtitle.modifiers="Text modifications"
 tuna.gui.tab.windowtitle.replace="Replace"
@@ -43,14 +44,23 @@ tuna.gui.tab.windowtitle.with="with"
 tuna.gui.tab.windowtitle.cut.begin="Cut first n characters"
 tuna.gui.tab.windowtitle.cut.end="Cut last n characters"
 
+# Edit output dialog
+tuna.gui.output.edit.dialog.title="Output editor"
+tuna.gui.output.edit.dialog.error.title="Output error"
+tuna.gui.output.edit.dialog.error="The provided data is incorrect. Make sure the format isn't empty and the path is valid"
+
 # Basic tab
+tuna.gui.tab.basics.song.output="Song info outputs"
 tuna.gui.tab.basics.song.info="Song info path"
 tuna.gui.tab.basics.song.cover="Song cover path"
 tuna.gui.tab.basics.song.cover.enable="Try downloading cover"
 tuna.gui.tab.basics.song.lyrics="Song lyrics path"
 tuna.gui.tab.basics.song.format="Song format"
+tuna.gui.tab.basics.song.output.add="Add new"
+tuna.gui.tab.basics.song.output.remove="Remove selected"
+tuna.gui.tab.basics.song.output.edit="Edit selected"
 tuna.gui.tab.basics.song.placeholder="Song placeholder"
-tuna.gui.tab.basics.format.info="Format info:\n %t => Song title\n %m => Song artist\t\t%d => Disc number\n %a => Album title\t\t\t%n => Track number\n %r => Full release date\t\t%p => Song progress\n %y => Release year\t\t%l => Song length\nKeep in mind that some sources do not support all format options"
+tuna.gui.tab.basics.format.info="Format info:\n %t => Song title\t\t\t%b => Linebreak\n %m => Song artist\t\t%d => Disc number\n %n => Track number\t\t%a => Album title\n %r => Full release date\t\t%p => Song progress\n %y => Release year\t\t%l => Song length\nKeep in mind that some sources do not support all format options"
 tuna.gui.tab.basics.source="Song source"
 tuna.gui.tab.basics.status.stopped="Tuna is not running"
 tuna.gui.tab.basics.status.started="Tuna is running"
