started work on vlc source support

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -26,6 +26,13 @@ tuna.gui.tab.spotify.linkmessage="This will open a browser window with the offic
 tuna.gui.tab.spotify.label.log="Response log"
 tuna.gui.tab.spotify.enablelog="Enable log"
 
+# vlc
+tuna.gui.tab.vlc="VLC"
+tuna.gui.vlc.refresh="Refresh"
+tuna.gui.vlc.source.name="VLC source name"
+tuna.gui.vlc.disabled="VLC support has been disabled, because OBS has received an update. It'll be reenabled once Tuna is updated."
+tuna.gui.vlc.none="None"
+
 # Config defaults
 tuna.config.song.placeholder="No song playing"
 tuna.config.song.format="%a - %t"
