cleaned up logging added message box to ask user if they want to keep vlc support enabled

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -1,5 +1,7 @@
 tuna.gui.title="Tuna settings"
 tuna.gui.menu="Tuna settings"
+tuna.error.title="Tuna"
+
 # Settings tabs
 tuna.gui.tab.basics="Basics"
 tuna.gui.tab.spotify="Spotify"
@@ -30,7 +32,7 @@ tuna.gui.tab.spotify.enablelog="Enable log"
 tuna.gui.tab.vlc="VLC"
 tuna.gui.vlc.refresh="Refresh"
 tuna.gui.vlc.source.name="VLC source name"
-tuna.gui.vlc.disabled="VLC support has been disabled, because OBS has received an update. It'll be reenabled once Tuna is updated."
+tuna.gui.vlc.error.message="OBS seems to have updated, which means that Tuna's VLC source support could potentially crash until Tuna is updated. Do you still want to leave it enabled?"
 tuna.gui.vlc.none="None"
 
 # Config defaults
