--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -68,7 +68,7 @@ tuna.gui.tab.basics.song.format="Song format"
 tuna.gui.tab.basics.song.output.add="Add new"
 tuna.gui.tab.basics.song.output.remove="Remove selected"
 tuna.gui.tab.basics.song.output.edit="Edit selected"
-tuna.gui.tab.basics.song.placeholder="Song placeholder"
+tuna.gui.tab.basics.song.placeholder="Song placeholder (Use \s for leading/trailing spaces)"
 tuna.gui.tab.basics.format.info="Format info:\n %t => Song title\t\t\t%b => Linebreak\n %m => Song artist\t\t%d => Disc number\n %n => Track number\t\t%a => Album title\n %r => Full release date\t\t%p => Song progress\n %y => Release year\t\t%l => Song length\nKeep in mind that some sources do not support all format options\nUsing uppercase letter (e.g. %T) will convert all characters to uppercase"
 tuna.gui.tab.basics.source="Song source"
 tuna.gui.tab.basics.status.stopped="Tuna is not running"
