Added error message locale fixed CMake message VLC error message only appears once every obs update and saves decision

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -32,7 +32,8 @@ tuna.gui.tab.spotify.enablelog="Enable log"
 tuna.gui.tab.vlc="VLC"
 tuna.gui.vlc.refresh="Refresh"
 tuna.gui.vlc.source.name="VLC source name"
-tuna.gui.vlc.error.message="OBS seems to have updated, which means that Tuna's VLC source support could potentially crash until Tuna is updated. Do you still want to leave it enabled?"
+tuna.gui.issue.title="Tuna plugin"
+tuna.gui.vlc.issue.message="OBS seems to have updated, which means that Tuna's VLC source support could potentially crash until Tuna is updated. Do you still want to leave it enabled?"
 tuna.gui.vlc.none="None"
 
 # Config defaults
