finished up VLC source support Fixed placeholder text conversion Fixed VLC source not being freed correctly Fixed VLC source not being loaded on obs startup Fixed selected VLC source not being saved Fixed VLC error message CSS Fixed VLC option not being disabled if libVLC couldn't be loaded Finished format option cropping Finished vlc error message when obs updated Fixed two memory leaks in vlc source option

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -29,6 +29,7 @@ tuna.gui.tab.spotify.label.log="Response log"
 tuna.gui.tab.spotify.enablelog="Enable log"
 
 # vlc
+tuna.gui.vlc.disabled="VLC support is disabled, either because OBS updated and it was disabled by the user, or because VLC isn't installed"
 tuna.gui.tab.vlc="VLC"
 tuna.gui.vlc.refresh="Refresh"
 tuna.gui.vlc.source.name="VLC source name"
@@ -69,8 +70,8 @@ tuna.gui.tab.basics.song.format="Song format"
 tuna.gui.tab.basics.song.output.add="Add new"
 tuna.gui.tab.basics.song.output.remove="Remove selected"
 tuna.gui.tab.basics.song.output.edit="Edit selected"
-tuna.gui.tab.basics.song.placeholder="Song placeholder (Use \s for leading/trailing spaces)"
-tuna.gui.tab.basics.format.info="Format info:\n %t => Song title\t\t\t%b => Linebreak\n %m => Song artist\t\t%d => Disc number\n %n => Track number\t\t%a => Album title\n %r => Full release date\t\t%p => Song progress\n %y => Release year\t\t%l => Song length\nKeep in mind that some sources do not support all format options\nUsing uppercase letter (e.g. %T) will convert all characters to uppercase"
+tuna.gui.tab.basics.song.placeholder="Song placeholder (Use %s for leading/trailing spaces)"
+tuna.gui.tab.basics.format.info="Format info:\n %t => Song title\t\t\t%b => Linebreak\n %m => Song artist\t\t%d => Disc number\n %n => Track number\t\t%a => Album title\n %r => Full release date\t\t%p => Song progress\n %y => Release year\t\t%l => Song length\n %s => Whitespace\nKeep in mind that some sources do not support all format options\nUsing uppercase letter (e.g. %T) will convert all characters to uppercase\nAppending [<n>] will limit the opion to <n> characters"
 tuna.gui.tab.basics.source="Song source"
 tuna.gui.tab.basics.status.stopped="Tuna is not running"
 tuna.gui.tab.basics.status.started="Tuna is running"
