fixed mpd cover not switching when pausing/unpausing mpd tab only offers covers for local servers now

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -43,6 +43,7 @@ tuna.config.song.format="%a - %t"
 
 # MPD tab
 tuna.gui.tab.mpd.local="Local connection"
+tuna.gui.tab.mpd.remote="Remote connection"
 tuna.gui.tab.mpd.server="MPD server address"
 tuna.gui.tab.mpd.base.folder="MPD Music folder (For cover art)"
 tuna.gui.select.mpd.folder="Select the base folder of your mpd installation"
