progress bar adjusts with frame time added option to disable background song info resets when stopping tuna

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -11,10 +11,12 @@ tuna.gui.tab.about="About"
 
 # Source
 tuna.source.progress.color.fg="Foreground color"
+tuna.source.progress.use.bg="Background"
 tuna.source.progress.color.bg="Background color"
 tuna.source.progress.cx="Width"
 tuna.source.progress.cy="Height"
 tuna.source.progress.name="Tuna progress bar"
+
 # Misc
 tuna.gui.select.song.file="Select destination for song file"
 tuna.gui.select.cover.file="Select destination for cover file"
