started work on music control dock

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -17,6 +17,13 @@ tuna.source.progress.cx="Width"
 tuna.source.progress.cy="Height"
 tuna.source.progress.name="Tuna progress bar"
 
+# Dock
+tuna.dock.title="Music control"
+tuna.dock.label.song="Song: "
+tuna.dock.menu.title="Music control context"
+tuna.dock.menu.toggle.volume="Toggle volume controls"
+tuna.dock.menu.toggle.info="Toggle song info"
+
 # Misc
 tuna.gui.select.song.file="Select destination for song file"
 tuna.gui.select.cover.file="Select destination for cover file"
