--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -77,10 +77,12 @@ tuna.gui.tab.windowtitle.cut.end="Cut last n characters"
 tuna.gui.output.edit.dialog.title="Output editor"
 tuna.gui.output.edit.dialog.error.title="Output error"
 tuna.gui.output.edit.dialog.error="The provided data is incorrect. Make sure the format isn't empty and the path is valid"
+tuna.gui.output.edit.dialog.logmode="Chat log mode"
 
 # Basic tab
 tuna.gui.tab.basics.song.output="Song info outputs"
 tuna.gui.tab.basics.song.info="Song info path"
+tuna.gui.tab.basics.song.logmode="Log mode"
 tuna.gui.tab.basics.song.cover="Song cover path"
 tuna.gui.tab.basics.song.cover.enable="Try downloading cover"
 tuna.gui.tab.basics.song.lyrics="Song lyrics path"
