Added option to hide progress bar if music is paused

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -16,6 +16,7 @@ tuna.source.progress.color.bg="Background color"
 tuna.source.progress.cx="Width"
 tuna.source.progress.cy="Height"
 tuna.source.progress.name="Tuna progress bar"
+tuna.source.progress.hide.paused="Hide when paused"
 
 # Dock
 tuna.dock.title="Music control"
