Fixed mixup between new line and label

--- a/data/locale/es-ES.ini
+++ b/data/locale/es-ES.ini
@@ -92,7 +92,7 @@ tuna.gui.tab.basics.song.output.add="Añadir nuevo"
 tuna.gui.tab.basics.song.output.remove="Eliminar seleccionado"
 tuna.gui.tab.basics.song.output.edit="Editar seleccionado"
 tuna.gui.tab.basics.song.placeholder="Mientras no hay canción (Usar %s para espacios iniciales/finales)"
-tuna.gui.tab.basics.format.info="Formato de la info:\n %t => Título\t\t\t%b => Salto de línea\n %m => Artista\t\t\t%d => Número de disco\n %n => Número de pista\t\t%a => Título del álbum\n %r => Fecha de lanzamiento\t%p => Progreso de la canción\n %y => Año de lanzamiento\t\t%l => Duración\n %e => Discográfica\t\t%s => Espacio en blanco\n\nTenga en cuenta que algunas fuentes no admiten todas las opciones de formato\nUsando la letra en mayúscula (p.e. %T) convertirá todos los caracteres a mayúsculas\nAnexar [<n>] limitará la opción a <n> caracteres"
+tuna.gui.tab.basics.format.info="Formato de la info:\n %t => Título\t\t\t%e => Salto de línea\n %m => Artista\t\t\t%d => Número de disco\n %n => Número de pista\t\t%a => Título del álbum\n %r => Fecha de lanzamiento\t%p => Progreso de la canción\n %y => Año de lanzamiento\t\t%l => Duración\n %b => Discográfica\t\t%s => Espacio en blanco\n\nTenga en cuenta que algunas fuentes no admiten todas las opciones de formato\nUsando la letra en mayúscula (p.e. %T) convertirá todos los caracteres a mayúsculas\nAnexar [<n>] limitará la opción a <n> caracteres"
 tuna.gui.tab.basics.source="Fuente de la canción"
 tuna.gui.tab.basics.status.stopped="Tuna no se está ejecutando"
 tuna.gui.tab.basics.status.started="Tuna se está ejecutando"
