add option to use custom secret and id for spotify

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -43,6 +43,8 @@ tuna.gui.tab.spotify.performrefresh="Perform refresh"
 tuna.gui.tab.spotify.linkmessage="This will open a browser window with the official Spotify webpage for you to login and grant access. Make sure to check that the URL is correct before logging in!"
 tuna.gui.tab.spotify.label.log="Response log"
 tuna.gui.tab.spotify.enablelog="Enable log"
+tuna.gui.tab.spotify.client_id="Spotify client ID"
+tuna.gui.tab.spotify.client_secret="Spotify client secret"
 
 # vlc
 tuna.gui.vlc.disabled="VLC support is disabled, either because OBS updated and it was disabled by the user, or because VLC isn't installed"
