--- a/data/locale/es-ES.ini
+++ b/data/locale/es-ES.ini
@@ -43,6 +43,8 @@ tuna.gui.tab.spotify.performrefresh="Realizar actualización"
 tuna.gui.tab.spotify.linkmessage="Esto abrirá una ventana del navegador con la página web oficial de Spotify para que pueda iniciar sesión y otorgar acceso. ¡Asegúrese de verificar que la URL sea correcta antes de iniciar sesión!"
 tuna.gui.tab.spotify.label.log="Registro de respuestas"
 tuna.gui.tab.spotify.enablelog="Habilitar registro"
+tuna.gui.tab.spotify.client_id="Spotify client ID"
+tuna.gui.tab.spotify.client_secret="Spotify client secret"
 
 # vlc
 tuna.gui.vlc.disabled="El soporte de VLC está deshabilitado, ya sea porque OBS se actualizó y el usuario lo deshabilitó o porque VLC no está instalado"
