--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -30,6 +30,12 @@ tuna.gui.select.song.file="Select destination for song file"
 tuna.gui.select.cover.file="Select destination for cover file"
 tuna.gui.select.lyrics.file="Select destination for lyrics file"
 
+# lastfm tab
+tuna.gui.tab.lastfm="last.fm"
+tuna.gui.tab.lastfm.username="Username"
+tuna.gui.tab.lastfm.apikey="Custom API key"
+
+
 # Spotify tab
 tuna.gui.tab.spotify.info="Grabs the currently playing song directly through the Spotify API. To enable this you have to log into Spotify over the link below. After you grant access, you'll get a login code, which you have to paste into the textbox below.\nKeep in mind that some API interactions, like pausing can only be used by premium users"
 tuna.gui.tab.spotify.login="Open login page"
