--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -86,6 +86,7 @@ tuna.gui.output.edit.dialog.title="Output editor"
 tuna.gui.output.edit.dialog.error.title="Output error"
 tuna.gui.output.edit.dialog.error="The provided data is incorrect. Make sure the format isn't empty and the path is valid"
 tuna.gui.output.edit.dialog.logmode="Chat log mode"
+tuna.gui.output.edit.dialog.format.error="The selected music source does not support one or more of the used format options!"
 
 # Basic tab
 tuna.gui.tab.basics.song.output="Song info outputs"
@@ -98,7 +99,8 @@ tuna.gui.tab.basics.song.format="Song format"
 tuna.gui.tab.basics.song.output.add="Add new"
 tuna.gui.tab.basics.song.output.remove="Remove selected"
 tuna.gui.tab.basics.song.output.edit="Edit selected"
-tuna.gui.tab.basics.song.placeholder="Song placeholder (Use %s for leading/trailing spaces)"
+tuna.gui.tab.basics.song.placeholder="Song placeholder"
+tuna.gui.tab.basics.song.placeholder.hint="Use %s for leading/trailing spaces"
 tuna.gui.tab.basics.format.info="Format info:\n %t => Song title\t\t\t%e => Linebreak\n %m => Song artist\t\t%d => Disc number\n %n => Track number\t\t%a => Album title\n %r => Full release date\t\t%p => Song progress\n %y => Release year\t\t%l => Song length\n %b => Song label\t\t%s => Whitespace\nKeep in mind that some sources do not support all format options\nUsing uppercase letter (e.g. %T) will convert all characters to uppercase\nAppending [<n>] will limit the option to <n> characters"
 tuna.gui.tab.basics.source="Song source"
 tuna.gui.tab.basics.status.stopped="Tuna is not running"
