revamped song format info label

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -101,7 +101,20 @@ tuna.gui.tab.basics.song.output.remove="Remove selected"
 tuna.gui.tab.basics.song.output.edit="Edit selected"
 tuna.gui.tab.basics.song.placeholder="Song placeholder"
 tuna.gui.tab.basics.song.placeholder.hint="Use %s for leading/trailing spaces"
-tuna.gui.tab.basics.format.info="Format info:\n %t => Song title\t\t\t%e => Linebreak\n %m => Song artist\t\t%d => Disc number\n %n => Track number\t\t%a => Album title\n %r => Full release date\t\t%p => Song progress\n %y => Release year\t\t%l => Song length\n %b => Song label\t\t%s => Whitespace\nKeep in mind that some sources do not support all format options\nUsing uppercase letter (e.g. %T) will convert all characters to uppercase\nAppending [<n>] will limit the option to <n> characters"
+tuna.gui.tab.basics.format.info="Keep in mind that some sources do not support all format options\nUsing uppercase letter (e.g. %T) will convert all characters to uppercase\nAppending [<n>] will limit the option to <n> characters"
+tuna.gui.tab.basics.format.title="Title"
+tuna.gui.tab.basics.format.artist="Artist"
+tuna.gui.tab.basics.format.date.full="Full release date"
+tuna.gui.tab.basics.format.number="Track number"
+tuna.gui.tab.basics.format.date.year="Release year"
+tuna.gui.tab.basics.format.label="Song label"
+tuna.gui.tab.basics.format.time.left="Time left"
+tuna.gui.tab.basics.format.linebreak="Linebreak"
+tuna.gui.tab.basics.format.disc.number="Disc number"
+tuna.gui.tab.basics.format.album="Album"
+tuna.gui.tab.basics.format.time.progress="Song progress"
+tuna.gui.tab.basics.format.time.length="Song length"
+tuna.gui.tab.basics.format.space="Whitespace"
 tuna.gui.tab.basics.source="Song source"
 tuna.gui.tab.basics.status.stopped="Tuna is not running"
 tuna.gui.tab.basics.status.started="Tuna is running"
