--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -8,6 +8,7 @@ tuna.gui.tab.spotify="Spotify"
 tuna.gui.tab.mpd="MPD"
 tuna.gui.tab.window_title="Window Title"
 tuna.gui.tab.about="About"
+tuna.gui.tab.gpmdp="Google Play Music Desktop Player"
 
 # Source
 tuna.source.progress.color.fg="Foreground color"
