--- a/data/locale/es-ES.ini
+++ b/data/locale/es-ES.ini
@@ -8,6 +8,7 @@ tuna.gui.tab.spotify="Spotify"
 tuna.gui.tab.mpd="MPD"
 tuna.gui.tab.window_title="Título de la ventana"
 tuna.gui.tab.about="Acerca de"
+tuna.gui.tab.gpmdp="Google Play Music Desktop Player"
 
 # Source
 tuna.source.progress.color.fg="Color en primer plano"
@@ -29,6 +30,11 @@ tuna.dock.menu.toggle.info="Info de la canción"
 tuna.gui.select.song.file="Seleccionar destino para el archivo de la canción"
 tuna.gui.select.cover.file="Seleccionar destino para el archivo de la portada"
 tuna.gui.select.lyrics.file="Seleccionar destino para el archivo de la letra"
+
+# lastfm tab
+tuna.gui.tab.lastfm="last.fm"
+tuna.gui.tab.lastfm.username="Nombre de usuario"
+tuna.gui.tab.lastfm.apikey="Clave API personalizada"
 
 # Spotify tab
 tuna.gui.tab.spotify.info="Toma la canción que se está reproduciendo directamente a través de la API de Spotify. Para habilitar esto, debe iniciar sesión en Spotify a través del siguiente enlace. Después de otorgar acceso, obtendrá un código de inicio de sesión que debe pegar en el cuadro de texto a continuación.\nTenga en cuenta que algunas interacciones de la API, como la pausa, solo pueden ser utilizadas por usuarios premium."
@@ -81,6 +87,7 @@ tuna.gui.output.edit.dialog.title="Editor de salida"
 tuna.gui.output.edit.dialog.error.title="Error de salida"
 tuna.gui.output.edit.dialog.error="Los datos proporcionados son incorrectos. Asegúrese de que el formato no esté vacío y que la ruta sea válida."
 tuna.gui.output.edit.dialog.logmode="Modo registro de chat"
+tuna.gui.output.edit.dialog.format.error="¡La fuente de música seleccionada no admite una o más de las opciones de formato utilizadas!"
 
 # Basic tab
 tuna.gui.tab.basics.song.output="Salidas de info de la canción"
@@ -93,8 +100,22 @@ tuna.gui.tab.basics.song.format="Formato de la canción"
 tuna.gui.tab.basics.song.output.add="Añadir nuevo"
 tuna.gui.tab.basics.song.output.remove="Eliminar seleccionado"
 tuna.gui.tab.basics.song.output.edit="Editar seleccionado"
-tuna.gui.tab.basics.song.placeholder="Mientras no hay canción (Usar %s para espacios iniciales/finales)"
-tuna.gui.tab.basics.format.info="Formato de la info:\n %t => Título\t\t\t%e => Salto de línea\n %m => Artista\t\t\t%d => Número de disco\n %n => Número de pista\t\t%a => Título del álbum\n %r => Fecha de lanzamiento\t%p => Progreso de la canción\n %y => Año de lanzamiento\t\t%l => Duración\n %b => Discográfica\t\t%s => Espacio en blanco\n\nTenga en cuenta que algunas fuentes no admiten todas las opciones de formato\nUsando la letra en mayúscula (p.e. %T) convertirá todos los caracteres a mayúsculas\nAnexar [<n>] limitará la opción a <n> caracteres"
+tuna.gui.tab.basics.song.placeholder="Mostrar mientras no hay canción"
+tuna.gui.tab.basics.song.placeholder.hint="Usar %s para espacios iniciales/finales"
+tuna.gui.tab.basics.format.info="Tenga en cuenta que algunas fuentes no admiten todas las opciones de formato\nUsando la letra en mayúscula (p.e. %T) convertirá todos los caracteres a mayúsculas\nAnexar [<n>] limitará la opción a <n> caracteres"
+tuna.gui.tab.basics.format.title="Título"
+tuna.gui.tab.basics.format.artist="Artista"
+tuna.gui.tab.basics.format.date.full="Fecha de lanzamiento"
+tuna.gui.tab.basics.format.number="Número de pista"
+tuna.gui.tab.basics.format.date.year="Año de lanzamiento"
+tuna.gui.tab.basics.format.label="Discográfica"
+tuna.gui.tab.basics.format.time.left="Tiempo restante"
+tuna.gui.tab.basics.format.linebreak="Salto de línea"
+tuna.gui.tab.basics.format.disc.number="Número de disco"
+tuna.gui.tab.basics.format.album="Álbum"
+tuna.gui.tab.basics.format.time.progress="Progreso de la canción"
+tuna.gui.tab.basics.format.time.length="Duración"
+tuna.gui.tab.basics.format.space="Espacio en blanco"
 tuna.gui.tab.basics.source="Fuente de la canción"
 tuna.gui.tab.basics.status.stopped="Tuna no se está ejecutando"
 tuna.gui.tab.basics.status.started="Tuna se está ejecutando"
