Added process option to window title source

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -81,6 +81,9 @@ tuna.gui.tab.windowtitle.replace="Replace"
 tuna.gui.tab.windowtitle.with="with"
 tuna.gui.tab.windowtitle.cut.begin="Cut first n characters"
 tuna.gui.tab.windowtitle.cut.end="Cut last n characters"
+tuna.gui.tab.windowtitle.use.process="Use Process name"
+tuna.gui.tab.windowtitle.processname="Process name"
+tuna.gui.tab.windowtitle.use.title="Use Window title"
 
 # Edit output dialog
 tuna.gui.output.edit.dialog.title="Output editor"
