--- a/data/locale/es-ES.ini
+++ b/data/locale/es-ES.ini
@@ -59,7 +59,7 @@ tuna.gui.vlc.refresh="Actualizar"
 tuna.gui.vlc.source.name="Nombre de la fuente VLC"
 tuna.gui.issue.title="Tuna plugin"
 tuna.gui.vlc.issue.message="OBS parece haberse actualizado, lo que significa que el soporte de fuente VLC de Tuna podría potencialmente bloquearse hasta que se actualice Tuna. ¿Todavía quieres dejarlo habilitado?"
-tuna.gui.vlc.none="Ninguna"
+tuna.gui.vlc.none="Ninguno"
 
 # Config defaults
 tuna.config.song.placeholder="Sin canción en reproducción"
@@ -81,6 +81,9 @@ tuna.gui.tab.windowtitle.replace="Reemplazar"
 tuna.gui.tab.windowtitle.with="con"
 tuna.gui.tab.windowtitle.cut.begin="Cortar los primeros (nº) caracteres"
 tuna.gui.tab.windowtitle.cut.end="Cortar los últimos (nº) caracteres"
+tuna.gui.tab.windowtitle.use.process="Usar nombre del proceso"
+tuna.gui.tab.windowtitle.processname="Nombre del proceso"
+tuna.gui.tab.windowtitle.use.title="Usar nombre de la ventana"
 
 # Edit output dialog
 tuna.gui.output.edit.dialog.title="Editor de salida"
