Changed message on wrong format options Changed default format to Artist - Song title

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -63,7 +63,7 @@ tuna.gui.vlc.none="None"
 
 # Config defaults
 tuna.config.song.placeholder="No song playing"
-tuna.config.song.format="%a - %t"
+tuna.config.song.format="%m - %t"
 
 # MPD tab
 tuna.gui.tab.mpd.local="Local connection"
@@ -90,7 +90,7 @@ tuna.gui.output.edit.dialog.title="Output editor"
 tuna.gui.output.edit.dialog.error.title="Output error"
 tuna.gui.output.edit.dialog.error="The provided data is incorrect. Make sure the format isn't empty and the path is valid"
 tuna.gui.output.edit.dialog.logmode="Chat log mode"
-tuna.gui.output.edit.dialog.format.error="The selected music source does not support one or more of the used format options!"
+tuna.gui.output.edit.dialog.format.error="The selected music source does not support one or more of the used format options! Do you still want to continue with them?"
 
 # Basic tab
 tuna.gui.tab.basics.song.output="Song info outputs"
