--- a/data/locale/es-ES.ini
+++ b/data/locale/es-ES.ini
@@ -63,7 +63,7 @@ tuna.gui.vlc.none="Ninguna"
 
 # Config defaults
 tuna.config.song.placeholder="Sin canción en reproducción"
-tuna.config.song.format="%a - %t"
+tuna.config.song.format="%m - %t"
 
 # MPD tab
 tuna.gui.tab.mpd.local="Conexión local"
