--- a/data/locale/ru-RU.ini
+++ b/data/locale/ru-RU.ini
@@ -63,7 +63,7 @@ tuna.gui.vlc.none="Никто"
 
 # Config defaults
 tuna.config.song.placeholder="Песня не играет"
-tuna.config.song.format="%a - %t"
+tuna.config.song.format="%m - %t"
 
 # MPD tab
 tuna.gui.tab.mpd.local="Местное соединение"
