Added local web server to host song info as JSON
Added mongoose for a simple http server
Updated CMakeLists and localization accordingly

This will allow users to display song information via a browser source
which is a lot more flexible than just text and image sources. I'll try
and add an example html file, which makes use of this feature later.

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -127,3 +127,4 @@ tuna.gui.tab.basics.start="Start"
 tuna.gui.tab.basics.stop="Stop"
 tuna.gui.tab.basics.notrunning="Preview: Plugin is not running"
 tuna.gui.tab.basics.preview="Preview: "
+tuna.gui.tab.basics.host.server="Host information on local webserver with port: "
