Added Web source This source receives information via the local webserver through POST requests. Currently there's a greasyfork script which can grab information from soundcloud and spotify web player.

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -9,6 +9,7 @@ tuna.gui.tab.mpd="MPD"
 tuna.gui.tab.window_title="Window Title"
 tuna.gui.tab.about="About"
 tuna.gui.tab.gpmdp="Google Play Music Desktop Player"
+tuna.gui.tab.web="Web browser"
 
 # Source
 tuna.source.progress.color.fg="Foreground color"
@@ -127,4 +128,4 @@ tuna.gui.tab.basics.start="Start"
 tuna.gui.tab.basics.stop="Stop"
 tuna.gui.tab.basics.notrunning="Preview: Plugin is not running"
 tuna.gui.tab.basics.preview="Preview: "
-tuna.gui.tab.basics.host.server="Host information on local webserver with port: "
+tuna.gui.tab.basics.host.server="Host/receive information on local webserver with port: "
