more work on deezer
added option to remove file extensions from title

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -135,3 +135,4 @@ tuna.gui.tab.basics.stop="Stop"
 tuna.gui.tab.basics.notrunning="Preview: Plugin is not running"
 tuna.gui.tab.basics.preview="Preview: "
 tuna.gui.tab.basics.host.server="Host/receive information on local webserver with port: "
+tuna.gui.tab.basics.removeextensions="Remove file extensions from title"
