allow linebreak in placeholder

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -111,7 +111,7 @@ tuna.gui.tab.basics.song.output.add="Add new"
 tuna.gui.tab.basics.song.output.remove="Remove selected"
 tuna.gui.tab.basics.song.output.edit="Edit selected"
 tuna.gui.tab.basics.song.placeholder="Song placeholder"
-tuna.gui.tab.basics.song.placeholder.hint="Use %s for leading/trailing spaces"
+tuna.gui.tab.basics.song.placeholder.hint="Use %s for leading/trailing spaces, %e for linebreaks"
 tuna.gui.tab.basics.format.info="Keep in mind that some sources do not support all format options\nUsing uppercase letter (e.g. %T) will convert all characters to uppercase\nAppending [<n>] will limit the option to <n> characters"
 tuna.gui.tab.basics.format.title="Title"
 tuna.gui.tab.basics.format.artist="Artist"
