--- a/data/locale/pt-BR.ini
+++ b/data/locale/pt-BR.ini
@@ -37,6 +37,12 @@ tuna.gui.tab.lastfm="last.fm"
 tuna.gui.tab.lastfm.username="Usuário"
 tuna.gui.tab.lastfm.apikey="Chave API customizada"
 
+# deezer
+tuna.gui.tab.deezer="Deezer"
+tuna.gui.tab.deezer.info="O Deezer fornece apenas um histórico de músicas, o que significa que as informações fornecidas estarão sempre uma música atrás."
+tuna.gui.tab.deezer.api.id="ID API personalizada"
+tuna.gui.tab.deezer.api.secret="Secret API personalizado"
+
 # Spotify tab
 tuna.gui.tab.spotify.info="Pega a música atualmente em reprodução diretamente por meio da API do Spotify. Para habilitar isso, você deve fazer o login no Spotify através do link abaixo. Depois de conceder acesso, você receberá um código de login, que deve ser colado na caixa de texto abaixo.\nLembre-se de que algumas interações da API, como a pausa, só podem ser usadas por usuários premium"
 tuna.gui.tab.spotify.login="Abrir página de login"
@@ -105,7 +111,7 @@ tuna.gui.tab.basics.song.output.add="Adicionar novo"
 tuna.gui.tab.basics.song.output.remove="Remover selecionado"
 tuna.gui.tab.basics.song.output.edit="Editar selecionados"
 tuna.gui.tab.basics.song.placeholder="Song placeholder"
-tuna.gui.tab.basics.song.placeholder.hint="Use %s para espaços iniciais/finais"
+tuna.gui.tab.basics.song.placeholder.hint="Use %s para espaços iniciais/finais, %e para quebras de linha"
 tuna.gui.tab.basics.format.info="Lembre-se de que algumas fontes não suportam todas as opções de formato\nUse letras maiúsculas (por exemplo %T) converterá todos os caracteres em maiúsculas\nColocar [<n>] limitará a opção a <n> caracteres"
 tuna.gui.tab.basics.format.title="Título"
 tuna.gui.tab.basics.format.artist="Artista"
@@ -129,3 +135,4 @@ tuna.gui.tab.basics.stop="Parar"
 tuna.gui.tab.basics.notrunning="Prévia: Plugin está em execução"
 tuna.gui.tab.basics.preview="Prévia: "
 tuna.gui.tab.basics.host.server="Hospedar/receber informações no servidor da web local com porta: "
+tuna.gui.tab.basics.removeextensions="Remover extensões de arquivo do título"
